--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>HAB Control</title>
-        <script type="module">
-            import init from "./wasm.js"
-            init();
-        </script>
+        <script src="index.js"></script>
     </head>
     <body></body>
 </html>
