--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>HAB Control</title>
-        <script src="index.js"></script>
+        <link data-trunk rel="scss" href="asset/scss/index.scss"/>
     </head>
-    <body></body>
 </html>
